# aistock

./: .gitignore  AGENTS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/_disabled/workflows/: release.yml
.github/workflows/: ci.yml  release.yml
.omo/plans/: ai-chat-modal.md  deployment-setup.md  framework-redesign.md  my-stocks-drawer.md  release-status.md  tauri-2-upgrade-learnings.md  today-news-panel.md
airflow/: Dockerfile  docker-compose.yml  requirements.txt  start.sh
airflow/dags/: ohlcv_daily_update.py
airflow/db/: airflow.db
airflow/scripts/: scheduled_ohlcv_update.py
backend/: pyproject.toml  requirements.txt
backend/scripts/: backfill_daily.py  backfill_daily_yf.py  backfill_minute.py  compute_bfp.py  daily_update.py  scheduled_ohlcv_update.py  seed_stock_codes.py  setup_seaweedfs.py
backend/src/: config.py  data_fetcher.py  db.py  duckdb_client.py  finmind.py  indicators.py  main.py  models.py  parquet_writer.py  rate_limiter.py
backend/src/routers/: auction.py  basics.py  market.py  news.py  stocks.py  watchlist.py
frontend/: README.md  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/public/: airflow-login.html
frontend/scripts/: dev.sh  reset-menu.ts  seed-menu.ts  start.sh  stop.sh
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/app/: globals.css  layout.tsx  (+1 more)
scripts/: build.sh  dev.sh  start.sh  stop.sh  validate-tauri-config.sh
(+66 files in other folders)
